src-tauri/check_errors_v3.txt
    Checking sentinel-db v0.1.0 (/Users/a1024/code/ai/sentinel-ai/src-tauri/sentinel-db)
warning: unused import: `PgRow`
 --> sentinel-db/src/database_service/service.rs:2:45
  |
2 | use sqlx::postgres::{PgPool, PgPoolOptions, PgRow};
  |                                             ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> sentinel-db/src/database_service/migration.rs:8:27
  |
8 | use tracing::{info, warn, error};
  |                           ^^^^^

warning: unused import: `engine::general_purpose`
 --> sentinel-db/src/database_service/migration.rs:9:27
  |
9 | use base64::{Engine as _, engine::general_purpose};
  |                           ^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> sentinel-db/src/database_service/scan_session.rs:98:13
   |
98 |         let mut query = "UPDATE scan_sessions SET updated_at = CURRENT_TIMESTAMP".to_string();
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> sentinel-db/src/database_service/scan_session.rs:99:13
   |
99 |         let mut idx = 1;
   |             ----^^^
   |             |
   |             help: remove this `mut`

warning: variable does not need to be mutable
   --> sentinel-db/src/database_service/migration.rs:456:25
    |
456 |                     let mut row_map = HashMap::new();
    |                         ----^^^^^^^
    |                         |
    |                         help: remove this `mut`

error[E0004]: non-exhaustive patterns: `&DatabasePool::SQLite(_)` not covered
   --> sentinel-db/src/database_service/migration.rs:481:15
    |
481 |         match pool {
    |               ^^^^ pattern `&DatabasePool::SQLite(_)` not covered
    |
note: `DatabasePool` defined here
   --> sentinel-db/src/database_service/connection_manager.rs:9:10
    |
  9 | pub enum DatabasePool {
    |          ^^^^^^^^^^^^
 10 |     PostgreSQL(PgPool),
 11 |     SQLite(sqlx::SqlitePool),
    |     ------ not covered
    = note: the matched value is of type `&DatabasePool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
513 ~                 },
514 +                 &DatabasePool::SQLite(_) => todo!()
    |

error[E0004]: non-exhaustive patterns: `&DatabasePool::SQLite(_)` not covered
   --> sentinel-db/src/database_service/migration.rs:520:19
    |
520 |             match pool {
    |                   ^^^^ pattern `&DatabasePool::SQLite(_)` not covered
    |
note: `DatabasePool` defined here
   --> sentinel-db/src/database_service/connection_manager.rs:9:10
    |
  9 | pub enum DatabasePool {
    |          ^^^^^^^^^^^^
 10 |     PostgreSQL(PgPool),
 11 |     SQLite(sqlx::SqlitePool),
    |     ------ not covered
    = note: the matched value is of type `&DatabasePool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
613 ~                 },
614 +                 &DatabasePool::SQLite(_) => todo!()
    |

error[E0004]: non-exhaustive patterns: `&DatabasePool::SQLite(_)` not covered
   --> sentinel-db/src/database_service/migration.rs:654:15
    |
654 |         match pool {
    |               ^^^^ pattern `&DatabasePool::SQLite(_)` not covered
    |
note: `DatabasePool` defined here
   --> sentinel-db/src/database_service/connection_manager.rs:9:10
    |
  9 | pub enum DatabasePool {
    |          ^^^^^^^^^^^^
 10 |     PostgreSQL(PgPool),
 11 |     SQLite(sqlx::SqlitePool),
    |     ------ not covered
    = note: the matched value is of type `&DatabasePool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
707 ~             },
708 +             &DatabasePool::SQLite(_) => todo!()
    |

warning: unused variable: `now`
   --> sentinel-db/src/database_service/rag.rs:445:13
    |
445 |         let now = chrono::Utc::now(); // Use DateTime for consistency? No, existing used RFC3339 string or i64?
    |             ^^^ help: if this is intentional, prefix it with an underscore: `_now`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `query`
  --> sentinel-db/src/database_service/scan_session.rs:98:13
   |
98 |         let mut query = "UPDATE scan_sessions SET updated_at = CURRENT_TIMESTAMP".to_string();
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_query`

warning: unused variable: `idx`
  --> sentinel-db/src/database_service/scan_session.rs:99:13
   |
99 |         let mut idx = 1;
   |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_idx`

warning: value assigned to `param_idx` is never read
   --> sentinel-db/src/database_service/scan_session.rs:166:13
    |
166 |             param_idx += 1;
    |             ^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `tables` is never read
   --> sentinel-db/src/database_service/migration.rs:113:9
    |
113 |         tables = self.sort_tables_by_dependencies(tables).await?;
    |         ^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: unused variable: `row`
   --> sentinel-db/src/database_service/migration.rs:455:21
    |
455 |                 for row in rows_obj {
    |                     ^^^ help: if this is intentional, prefix it with an underscore: `_row`

For more information about this error, try `rustc --explain E0004`.
warning: `sentinel-db` (lib) generated 12 warnings
error: could not compile `sentinel-db` (lib) due to 3 previous errors; 12 warnings emitted
